--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="container-fluid">
 
         <div class="footer-contents">
-			<img src="https://yves91.github.io/canvart/assets/Canvart-logo(2).png" class="footer-logo">
+			<img src="https://yves91.github.io/canvart/assets/Canvart-logo(2).png" class="canvart-logo">
 			<p class="designedBy">Yves Fostel Web Designs</p>
 		</div>
    
